Import Issues Due To Resolving Conflicts on Previous PR#19 Fixed Scrollbar Issue

--- a/src/App.css
+++ b/src/App.css
@@ -125,3 +125,7 @@ html::-webkit-scrollbar-thumb {
 .hidden {
   display: none;
 }
+
+.main-content::-webkit-scrollbar {
+    display: none;
+}
